@@ -287,7 +287,7 @@ These settings should be placed in the <emphasis>General Options</emphasis> grou
 <title>Max Icon Size</title>
 
 <para>
-The maximum size of the icons in the <interface>Icon View</interface> may be changed with this setting. The default value is 96. The size must be in the range of 32 to 256.
+The maximum size of the icons in the <interface>Icon View</interface> may be changed with this setting. The default value is 96. The size must be in the range of 32 to 512.
 </para>
 </sect3>
 
