@@ -1,5 +1,6 @@
 /***************************************************************************
     Copyright (C) 2005-2009 Robby Stephenson <robby@periapsis.org>
+    Copyright (C) 2011 Pedro Miguel Carvalho <kde@pmc.com.pt>
  ***************************************************************************/
 
 /***************************************************************************
@@ -32,6 +33,8 @@
 
 class QLabel;
 class KPushButton;
+class QToolButton;
+class QSlider;
 
 namespace Tellico {
   namespace GUI {
@@ -53,10 +56,34 @@ public:
   static StatusBar* self() { return s_self; }
 
   virtual void ensurePolished() const;
+  
+signals:
+  /** 
+   * Emitted when the user manipulates the GUI to change the maximum icon size in the icon list view.
+  */
+  void requestIconSizeChange(int);
+  
+public slots:
+  /**
+   * Sets the visibility of the icon size GUI controls
+   */
+  void setIconSizeInterfaceVisible(bool);
 
 private slots:
   void slotProgress(qulonglong progress);
   void slotUpdate();
+  /**
+    * Called when the "Decrease Icon Size" button is clicked.
+    */
+  void slotDecreaseIconSizeButtonClicked();
+  /**
+    * Called when the "Increase Icon Size" button is clicked.
+    */
+  void slotIncreaseIconSizeButtonClicked();
+  /**
+    * Called when the "Icon Size" slider value changes.
+    */
+  void slotIconSizeSliderChanged(int);
 
 private:
   static StatusBar* s_self;
@@ -69,6 +96,9 @@ private:
   QLabel* m_countLabel;
   GUI::Progress* m_progress;
   KPushButton* m_cancelButton;
+  QSlider* m_iconSizeSlider;
+  QToolButton* m_increaseIconSizeButton;
+  QToolButton* m_decreaseIconSizeButton;
 };
 
 }
