@@ -1,5 +1,6 @@
 /***************************************************************************
     Copyright (C) 2001-2009 Robby Stephenson <robby@periapsis.org>
+    Copyright (C) 2011 Pedro Miguel Carvalho <kde@pmc.com.pt>
  ***************************************************************************/
 
 /***************************************************************************
@@ -478,6 +479,10 @@ private slots:
   void slotClearFilter();
   void slotRenameCollection();
   void slotImageLocationChanged();
+  /**
+   * Called when the viewStack's current widget changes
+   */
+  void slotCurrentViewWidgetChanged();
 
 private:
   void importFile(Import::Format format, const KUrl::List& kurls);
